# refinery

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/converge_cli/: Cargo.toml
crates/converge_cli/src/: main.rs
crates/converge_core/: Cargo.toml
crates/converge_core/src/: engine.rs  lib.rs  prompts.rs  testing.rs  types.rs
crates/converge_core/src/phases/: close.rs  mod.rs  refine.rs
crates/converge_providers/: Cargo.toml
crates/converge_providers/src/: claude.rs  codex.rs  credential.rs  gemini.rs  process.rs
crates/refinery_cli/: Cargo.toml
crates/refinery_cli/src/: main.rs
crates/refinery_core/: Cargo.toml
crates/refinery_core/src/: engine.rs  error.rs  lib.rs  progress.rs  prompts.rs  strategy.rs  testing.rs  types.rs
crates/refinery_core/src/phases/: close.rs  evaluate.rs  mod.rs  propose.rs  refine.rs
crates/refinery_providers/: Cargo.toml
crates/refinery_providers/src/: claude.rs  codex.rs  credential.rs  gemini.rs  lib.rs  process.rs  tools.rs
docs/brainstorms/: 2026-02-10-consensus-loop-design-brainstorm.md  2026-02-12-readme-completion-brainstorm.md  2026-03-11-file-input-support-brainstorm.md  2026-03-13-provider-model-syntax-brainstorm.md
docs/plans/: 2026-02-10-feat-consensus-loop-engine-plan.md  2026-02-11-feat-subscription-credential-support-plan.md  2026-02-12-docs-complete-readme-plan.md  2026-03-12-feat-file-input-support-plan.md  2026-03-13-refactor-provider-model-syntax-plan.md  2026-03-13-refactor-remove-refine-phase-plan.md
docs/solutions/documentation/: ankane-readme-style-for-rust.md
docs/solutions/integration-issues/: cli-provider-flags-and-sandboxing.md
docs/solutions/runtime-errors/: graceful-degradation-and-review-patterns.md
docs/solutions/security-issues/: prompt-injection-prevention-multi-model.md
todos/: 001-setsid-process-groups.md  002-model-id-anonymity-in-round-context.md  003-rate-limiter.md
