[package]
name = "converge_core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }

[features]
testing = []

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
rstest = "0.25"

[lints]
workspace = true
