[package]
name = "converge_providers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = ["claude", "codex", "gemini"]
claude = []
codex = []
gemini = []

[dependencies]
converge_core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
